--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,10 @@
-name: Windows-2025 Personal Cloud PC (ngrok + RDP)
+name: Windows-2025 Personal Cloud PC (Tailscale + RDP)
 
 on:
   workflow_dispatch:
     inputs:
-      ngrok_auth_token:
-        description: "Your ngrok auth token"
+      tailscale_auth_key:
+        description: "Your Tailscale auth key"
         required: true
       pc_name:
         description: "Friendly name for your Cloud PC"
@@ -14,16 +14,16 @@ jobs:
   cloud-pc-job:
     runs-on: windows-2025
     env:
-      NGROK_AUTH_TOKEN: ${{ github.event.inputs.ngrok_auth_token }}
+      TAILSCALE_AUTH_KEY: ${{ github.event.inputs.tailscale_auth_key }}
       PC_NAME: ${{ github.event.inputs.pc_name }}
     steps:
-      - name: Set PC Name
+      - name: 🖥️ Preparing PC Name
         shell: powershell
         run: |
           Rename-Computer -NewName $env:PC_NAME -Force -Restart:$false
           Write-Output "PC name set to $env:PC_NAME"
 
-      - name: Create CloudPCUSER
+      - name: 👤 Preparing CloudPC User
         shell: powershell
         run: |
           $username = "CloudPCUSER"
@@ -34,42 +34,45 @@ jobs:
               Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username
           }
 
-      - name: Enable RDP
+      - name: 🔒 Preparing Remote Desktop
         shell: powershell
         run: |
           Set-ItemProperty -Path "HKLM:\System\CurrentControlSet\Control\Terminal Server" -Name "fDenyTSConnections" -Value 0
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
 
-      - name: Doing final touches
+      - name: ⚡ Preparing Tailscale
         shell: powershell
         run: |
-          $ngrokZip = "$env:TEMP\ngrok.zip"
-          $ngrokExe = "$env:TEMP\ngrok.exe"
-          Invoke-WebRequest "https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip" -OutFile $ngrokZip > $null
-          Expand-Archive $ngrokZip -DestinationPath $env:TEMP -Force > $null
-          & $ngrokExe authtoken $env:NGROK_AUTH_TOKEN > $null
-          Start-Process $ngrokExe -ArgumentList "tcp 3389" -WindowStyle Hidden
+          # Download portable Tailscale
+          $tailscaleExe = "$env:TEMP\tailscale.exe"
+          Invoke-WebRequest "https://pkgs.tailscale.com/stable/tailscale-ipn-win-amd64.exe" -OutFile $tailscaleExe > $null
 
-      - name: Your Cloud PC is booted
+          # Start Tailscale with auth key
+          Start-Process $tailscaleExe -ArgumentList "up --authkey $env:TAILSCALE_AUTH_KEY --hostname $env:PC_NAME --accept-routes" -WindowStyle Hidden -Wait
+
+      - name: 🚀 Finalizing Cloud PC
         shell: powershell
         run: |
           $username = "CloudPCUSER"
           $password = "WindowsCloudPC#2025"
           $pcName = $env:PC_NAME
-          $ngrokExe = "$env:TEMP\ngrok.exe"
+          $tailscaleExe = "$env:TEMP\tailscale.exe"
+
+          # Wait a few seconds for Tailscale to fully start
+          Start-Sleep -Seconds 10
 
           $endTime = (Get-Date).AddHours(5)
           while ((Get-Date) -lt $endTime) {
-              $tunnel = & $ngrokExe tunnels list 2>$null | Select-String "tcp"
-              if ($tunnel) {
-                  $url = ($tunnel -split "\s+")[2]
-              } else {
-                  $url = "Pending..."
-              }
+              # Get Tailscale IP
+              $tailscaleIP = (& $tailscaleExe ip -4).Trim()
+              # Get Tailscale node name
+              $tailscaleNodeName = (& $tailscaleExe status | Select-String "hostname:").ToString().Split(":")[1].Trim()
+              
               Write-Output "Your personal Cloud PC $pcName is ready!"
               Write-Output "Login user: $username"
               Write-Output "Password: $password"
-              Write-Output "Connect via RDP using ngrok URL: $url"
+              Write-Output "Tailscale IP: $tailscaleIP"
+              Write-Output "Tailscale Node Name: $tailscaleNodeName"
               Start-Sleep -Seconds 60
           }
           Write-Output "5 hours reached. Cloud PC job completed."
